--- a/banano-sports-pools/templates/roadmap.html
+++ b/banano-sports-pools/templates/roadmap.html
@@ -49,7 +49,10 @@
                     <a class="nav-link" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/nfl/nfl_pools">NFL Pools</a>
+                    <a class="nav-link" href="/sports/html/nfl/nfl_pools">NFL Pools</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/sports/html/rwc/rwc_pools">RWC Pools</a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="/roadmap">Roadmap</a>
@@ -69,6 +72,16 @@
             <div class="row">
                 <div class="col-md-12">
                     <h1>Release Notes</h1>
+                    <hr style="color:lightgray; border-width: 3px;">
+                    <h4>09/12/2023, v2.1</h4>
+                    <ul>
+                        <li>Finished refactor of the backend to add new sports more systematically</li>
+                        <li>Added Rugby World Cup fixtures to pools</li>
+                        <li>Added Rugby World Cup data refresh and payment automation</li>
+                        <li>Added Fractional and Decimal Odds representation</li>
+                    </ul>
+                </div>
+                <div class="col-md-12">
                     <hr style="color:lightgray; border-width: 3px;">
                     <h4>09/03/2023, v2.0</h4>
                     <ul>
