--- a/banano-sports-pools/templates/rwc/rwc_leaderboards.html
+++ b/banano-sports-pools/templates/rwc/rwc_leaderboards.html
@@ -32,7 +32,7 @@
     <script src="https://cdn.datatables.net/buttons/1.6.1/js/buttons.print.min.js"></script>
 
     <script src="../../../static/js/leaderboards.js"></script>
-    <script src="../../../static/js/nfl/nfl_leaderboards.js"></script>
+    <script src="../../../static/js/rwc/rwc_leaderboards.js"></script>
 
 </head>
 
@@ -64,16 +64,16 @@
                     <a class="nav-link" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/sports/html/nfl/nfl_pools">NFL Pools</a>
+                    <a class="nav-link" href="/sports/html/rwc/rwc_pools">RWC Pools</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/sports/html/nfl/nfl_history">NFL History</a>
+                    <a class="nav-link" href="/sports/html/rwc/rwc_history">RWC History</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/sports/html/nfl/nfl_payouts">NFL Payouts</a>
+                    <a class="nav-link" href="/sports/html/rwc/rwc_payouts">RWC Payouts</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/sports/html/nfl/nfl_leaderboards">NFL Stats</a>
+                    <a class="nav-link" href="/sports/html/rwc/rwc_leaderboards">RWC Stats</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/roadmap">Roadmap</a>
@@ -85,7 +85,7 @@
         <div class="container-fluid jumbotron">
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <h1>NFL Pool Stats</h1>
+                    <h1>RWC Pool Stats</h1>
                     <p>If you have verified your BAN address, your stats should be highlighted below.</p>
                 </div>
             </div>
@@ -105,33 +105,10 @@
                                 </select>
                             </div>
                             <div class="d-flex flex-column">
-                                <label class="col-form-label" for="week_inp">NFL Week</label>
+                                <label class="col-form-label" for="week_inp">Match Round</label>
                                 <select id="week_inp">
-                                    <option value="'1','2','3','4','5','6','7','8','9','10','11','12','13','14','15','16','17','18','19','20','21','23'">All</option>
-                                    <option value="'19','20','21','23'">Playoffs</option>
-                                    <option value="'1'" selected>Week 1</option>
-                                    <option value="'2'">Week 2</option>
-                                    <option value="'3'">Week 3</option>
-                                    <option value="'4'">Week 4</option>
-                                    <option value="'5'">Week 5</option>
-                                    <option value="'6'">Week 6</option>
-                                    <option value="'7'">Week 7</option>
-                                    <option value="'8'">Week 8</option>
-                                    <option value="'9'">Week 9</option>
-                                    <option value="'10'">Week 10</option>
-                                    <option value="'11'">Week 11</option>
-                                    <option value="'12'">Week 12</option>
-                                    <option value="'13'">Week 13</option>
-                                    <option value="'14'">Week 14</option>
-                                    <option value="'15'">Week 15</option>
-                                    <option value="'16'">Week 16</option>
-                                    <option value="'17'">Week 17</option>
-                                    <option value="'18'">Week 18</option>
-                                    <option value="'19'" >Wild Card</option>
-                                    <option value="'20'">Division</option>
-                                    <option value="'21'">Championship</option>
-                                    <!-- <option value='"22"'>Pro Bowl</option> -->
-                                    <option value="'23'">Super Bowl</option>
+                                    <option value="'group'">All</option>
+                                    <option value="'group'" selected>Group</option>
                               </select>
                             </div>
                         </div>
@@ -162,7 +139,7 @@
                 <table id="sql_table" class="table table-hover table-bordered table-striped text-center">
                     <thead>
                         <tr>
-                            <th>NFL Week</th>
+                            <th>Match Round</th>
                             <th>Address</th>
                             <th>No. Games</th>
                             <th>Winners</th>
@@ -179,7 +156,7 @@
                 <table id="indiv_table" class="table table-hover table-bordered table-striped text-center" style="display:none">
                     <thead>
                         <tr>
-                            <th>NFL Week</th>
+                            <th>Match Round</th>
                             <th>Address</th>
                             <th>Game ID</th>
                             <th>Betting Team</th>
