--- a/banano-sports-pools/templates/rwc/rwc_payouts.html
+++ b/banano-sports-pools/templates/rwc/rwc_payouts.html
@@ -20,7 +20,6 @@
     <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap4.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
     <!-- Buttons -->
     <script src="https://cdn.datatables.net/buttons/1.6.1/js/dataTables.buttons.min.js"></script>
@@ -31,8 +30,8 @@
     <script src="https://cdn.datatables.net/buttons/1.6.1/js/buttons.html5.min.js"></script>
     <script src="https://cdn.datatables.net/buttons/1.6.1/js/buttons.print.min.js"></script>
 
-    <script src="../../../static/js/leaderboards.js"></script>
-    <script src="../../../static/js/nfl/nfl_leaderboards.js"></script>
+    <script src="../../../static/js/payouts.js"></script>
+    <script src="../../../static/js/rwc/rwc_payouts.js"></script>
 
 </head>
 
@@ -64,16 +63,16 @@
                     <a class="nav-link" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/sports/html/nfl/nfl_pools">NFL Pools</a>
+                    <a class="nav-link" href="/sports/html/rwc/rwc_pools">RWC Pools</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/sports/html/nfl/nfl_history">NFL History</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/sports/html/nfl/nfl_payouts">NFL Payouts</a>
+                    <a class="nav-link" href="/sports/html/rwc/rwc_history">RWC History</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/sports/html/nfl/nfl_leaderboards">NFL Stats</a>
+                    <a class="nav-link" href="/sports/html/rwc/rwc_payouts">RWC Payouts</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/sports/html/rwc/rwc_leaderboards">RWC Stats</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/roadmap">Roadmap</a>
@@ -85,8 +84,8 @@
         <div class="container-fluid jumbotron">
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <h1>NFL Pool Stats</h1>
-                    <p>If you have verified your BAN address, your stats should be highlighted below.</p>
+                    <h1>Deposit Payouts</h1>
+                    <p>If you have verified your BAN address, your payouts should be highlighted below.</p>
                 </div>
             </div>
         </div>
@@ -105,42 +104,20 @@
                                 </select>
                             </div>
                             <div class="d-flex flex-column">
-                                <label class="col-form-label" for="week_inp">NFL Week</label>
+                                <label class="col-form-label" for="week_inp">Match Round</label>
                                 <select id="week_inp">
-                                    <option value="'1','2','3','4','5','6','7','8','9','10','11','12','13','14','15','16','17','18','19','20','21','23'">All</option>
-                                    <option value="'19','20','21','23'">Playoffs</option>
-                                    <option value="'1'" selected>Week 1</option>
-                                    <option value="'2'">Week 2</option>
-                                    <option value="'3'">Week 3</option>
-                                    <option value="'4'">Week 4</option>
-                                    <option value="'5'">Week 5</option>
-                                    <option value="'6'">Week 6</option>
-                                    <option value="'7'">Week 7</option>
-                                    <option value="'8'">Week 8</option>
-                                    <option value="'9'">Week 9</option>
-                                    <option value="'10'">Week 10</option>
-                                    <option value="'11'">Week 11</option>
-                                    <option value="'12'">Week 12</option>
-                                    <option value="'13'">Week 13</option>
-                                    <option value="'14'">Week 14</option>
-                                    <option value="'15'">Week 15</option>
-                                    <option value="'16'">Week 16</option>
-                                    <option value="'17'">Week 17</option>
-                                    <option value="'18'">Week 18</option>
-                                    <option value="'19'" >Wild Card</option>
-                                    <option value="'20'">Division</option>
-                                    <option value="'21'">Championship</option>
-                                    <!-- <option value='"22"'>Pro Bowl</option> -->
-                                    <option value="'23'">Super Bowl</option>
-                              </select>
+                                <option value="group" selected>Group</option>
+                            </select>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="d-flex flex-column">
-                                <label class="col-form-label" for="ban_address">BAN Address</label>
-                                <select id="ban_address">
-                                    <option value="">All</option>
-                                </select>
+                                <label class="col-form-label" for="min_ban">Min. BAN</label>
+                                <input type="number" id="min_ban" name="min_ban" min="0" value="0" step="10">
+                            </div>
+                            <div class="d-flex flex-column">
+                                <label class="col-form-label" for="max_ban">Max. BAN</label>
+                                <input type="number" id="max_ban" name="max_ban" min="0" value="2000" step="10">
                             </div>
                         </div>
 
@@ -159,50 +136,23 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12 table-responsive">
-                <table id="sql_table" class="table table-hover table-bordered table-striped text-center">
+                <table id="payouts_table" class="table table-hover table-bordered table-striped text-center">
                     <thead>
                         <tr>
-                            <th>NFL Week</th>
-                            <th>Address</th>
-                            <th>No. Games</th>
-                            <th>Winners</th>
-                            <th>Draws</th>
-                            <th>Win %</th>
-                            <th>Total Bet</th>
-                            <th>Payouts</th>
-                            <th>Profit</th>
-                            <th>Return %</th>
-                        </tr>
-                    </thead>
-                    <tbody></tbody>
-                </table>
-                <table id="indiv_table" class="table table-hover table-bordered table-striped text-center" style="display:none">
-                    <thead>
-                        <tr>
-                            <th>NFL Week</th>
-                            <th>Address</th>
+                            <th>Match Round</th>
                             <th>Game ID</th>
-                            <th>Betting Team</th>
-                            <th>Won?</th>
-                            <th>Draw?</th>
-                            <th>Total Bet</th>
-                            <th>Payouts</th>
-                            <th>Profit</th>
-                            <th>Return %</th>
+                            <th>Ban Address</th>
+                            <th>Total Deposits</th>
+                            <th>Winning Pool</th>
+                            <th>Percent of Pool</th>
+                            <th>Losing Pool</th>
+                            <th>Amount Won</th>
+                            <th>Payout</th>
+                            <th>Block</th>
                         </tr>
                     </thead>
                     <tbody></tbody>
                 </table>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <div id="bar_plot"></div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <div id="pie_plot"></div>
             </div>
         </div>
     </div>
