--- a/banano-sports-pools/templates/welcome.html
+++ b/banano-sports-pools/templates/welcome.html
@@ -49,7 +49,10 @@
                     <a class="nav-link" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/nfl/nfl_pools">NFL Pools</a>
+                    <a class="nav-link" href="/sports/html/nfl/nfl_pools">NFL Pools</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/sports/html/rwc/rwc_pools">RWC Pools</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/roadmap">Roadmap</a>
@@ -85,18 +88,18 @@
             <hr style="color:lightgray; border-width: 3px;">
             <div class="row form-group">
                 <div class="col-md-4 d-flex text-center align-items-center justify-content-center">
-                    <a href="/nfl/nfl_pools">
+                    <a href="/sports/html/nfl/nfl_pools">
                         <h3>NFL</h3>
                         <img src="/static/assets/american-football.png" style="width: 100%; height:400px;"></a>
                 </div>
                 <div class="col-md-4 d-flex text-center align-items-center justify-content-center">
-                    <a href="#">
-                        <h3>Premier League</h3>
-                        <img src="/static/assets/work_inprogress.png" style="width: 100%; height:400px;"></a>
+                    <a href="/sports/html/rwc/rwc_pools">
+                        <h3>Rugby World Cup</h3>
+                        <img src="/static/assets/rugby_world_cup.png" style="width: 100%; height:400px;"></a>
                 </div>
                 <div class="col-md-4 d-flex text-center align-items-center justify-content-center">
                     <a href="#">
-                        <h3>NBA</h3>
+                        <h3>Premier League</h3>
                         <img src="/static/assets/work_inprogress.png" style="width: 100%; height:400px;"></a>
                 </div>
             </div>
