--- a/banano-sports-pools/templates/nfl/nfl_pools.html
+++ b/banano-sports-pools/templates/nfl/nfl_pools.html
@@ -85,7 +85,7 @@
             <div class="col-md-6 text-center">
                     <!-- Button trigger modal -->
                     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#v2_info_modal">
-                        What's new in v2.0?
+                        What's new in v2.x?
                     </button>
             </div>
         </div>
@@ -199,7 +199,7 @@
         <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h2 class="modal-title">What's new in v2.0?</h2>
+                    <h2 class="modal-title">What's new in v2.x?</h2>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
