--- a/banano-sports-pools/templates/welcome.html
+++ b/banano-sports-pools/templates/welcome.html
@@ -64,7 +64,7 @@
         <div class="container-fluid jumbotron">
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <h1>Welcome to the Banano Sports Pools! (v2.0)</h1>
+                    <h1>Welcome to the Banano Sports Pools! (v2.1)</h1>
                     <h3>Why not get started by selecting an available sport?</h3>
                     <br>
                 </div>
@@ -79,7 +79,7 @@
                 <div class="col-md-6 text-center">
                     <!-- Button trigger modal -->
                     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#v2_info_modal">
-                        What's new in v2.0?
+                        What's new in v2.x?
                     </button>
                 </div>
             </div>
@@ -143,7 +143,7 @@
         <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h2 class="modal-title">What's new in v2.0?</h2>
+                    <h2 class="modal-title">What's new in v2.x?</h2>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
