--- a/banano-sports-pools/templates/rwc/rwc_history.html
+++ b/banano-sports-pools/templates/rwc/rwc_history.html
@@ -99,7 +99,6 @@
                                 <label class="col-form-label" for="season_inp">Season:</label>
                                 <div style="clear: both;"></div>
                                 <select id="season_inp">
-                                    <option value="2022">2022/23</option>
                                     <option value="2023" selected>2023/24</option>
                                 </select>
                             </div>
@@ -172,10 +171,10 @@
             <div class="col-md-8">
                 <p style="display: inline;">Made with 🍌 by elementalennui.
                     <ul style="list-style-type: none; display: inline;">
-                        <li style="display: inline;"><a href="https://github.com/elementalennui/banano_coding_challenges" target="_blank">Github |</a></li>
+                        <li style="display: inline;"><a href="https://github.com/elementalennui-dev/banano-sports-pools/tree/main" target="_blank">Github |</a></li>
                         <li style="display: inline;"><a href="https://twitter.com/elementalennui/" target="_blank">Twitter |</a></li>
                         <li style="display: inline;"><a href="https://www.reddit.com/user/elementalennui" target="_blank">Reddit |</a></li>
-                        <li style="display: inline;">Discord: elementalennui#4641</li>
+                        <li style="display: inline;">Discord: elementalennui</li>
                     </ul>
                 </p>
             </div>
