--- a/banano-sports-pools/templates/welcome.html
+++ b/banano-sports-pools/templates/welcome.html
@@ -193,10 +193,10 @@
             <div class="col-md-8">
                 <p style="display: inline;">Made with 🍌 by elementalennui.
                     <ul style="list-style-type: none; display: inline;">
-                        <li style="display: inline;"><a href="https://github.com/elementalennui/banano_coding_challenges" target="_blank">Github |</a></li>
+                        <li style="display: inline;"><a href="https://github.com/elementalennui-dev/banano-sports-pools/tree/main" target="_blank">Github |</a></li>
                         <li style="display: inline;"><a href="https://twitter.com/elementalennui/" target="_blank">Twitter |</a></li>
                         <li style="display: inline;"><a href="https://www.reddit.com/user/elementalennui" target="_blank">Reddit |</a></li>
-                        <li style="display: inline;">Discord: elementalennui#4641</li>
+                        <li style="display: inline;">Discord: elementalennui</li>
                     </ul>
                 </p>
             </div>
