--- a/banano-sports-pools/templates/rwc/rwc_leaderboards.html
+++ b/banano-sports-pools/templates/rwc/rwc_leaderboards.html
@@ -30,7 +30,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
     <script src="https://cdn.datatables.net/buttons/1.6.1/js/buttons.html5.min.js"></script>
     <script src="https://cdn.datatables.net/buttons/1.6.1/js/buttons.print.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/davidshimjs/qrcodejs/qrcode.min.js"></script>
 
+    <script src="../../../static/js/tip.js"></script>
     <script src="../../../static/js/leaderboards.js"></script>
     <script src="../../../static/js/rwc/rwc_leaderboards.js"></script>
 
@@ -183,14 +185,24 @@
         </div>
     </div>
     <hr style="color:lightgray; border-width: 3px;">
-    <div class="col-md-12 jumbotron text-center">
-        <h5>What the fork is BANANO?</h5>
-        <p>BANANO was forked in April 2018 from NANO. BANANO offers instant, feeless and rich in potassium 🍌 transactions, thanks to the fact that BANANO developers (several of them having being involved in NANO itself) have kept big portions of the original
-            code unchanged to keep cross-chain compatibility between existing code libraries. However, they have fined-tuned some parameters, such as Proof of Work requirements and currency units. While the focus for now is on having an ongoing free and
-            fair distribution, BANANO is also experimenting with feature additions such as a privacy layer (Camo BANANO), on-chain messaging (MonkeyTalks) and more. In context of distribution, we aim to use our meanwhile ready-to-strike infrastructure
-            with easy-to-use mobile wallets (Kalium) and tipbots on several major social media platforms to onboard normies and crypto-noobs who have no idea yet what a cryptocurrency is. We also might do IRL airdrops at some point. Of note, key here
-            is to make the start with crypto as easy as possible, use a fun attitude and gamification to get new users started without all the usual hassle, and then educate them to handle crypto in general in a responsible way.</p>
-        <a href="https://banano.cc/" target="_blank">Check out more about Banano and get a wallet address here!</a>
+    <div class="container-fluid">
+        <div class="row jumbotron">
+            <div class="col-md-10 text-center">
+                <h5>What the fork is BANANO?</h5>
+                <p>BANANO was forked in April 2018 from NANO. BANANO offers instant, feeless and rich in potassium 🍌 transactions, thanks to the fact that BANANO developers (several of them having being involved in NANO itself) have kept big portions of the original
+                    code unchanged to keep cross-chain compatibility between existing code libraries. However, they have fined-tuned some parameters, such as Proof of Work requirements and currency units. While the focus for now is on having an ongoing free and
+                    fair distribution, BANANO is also experimenting with feature additions such as a privacy layer (Camo BANANO), on-chain messaging (MonkeyTalks) and more. In context of distribution, we aim to use our meanwhile ready-to-strike infrastructure
+                    with easy-to-use mobile wallets (Kalium) and tipbots on several major social media platforms to onboard normies and crypto-noobs who have no idea yet what a cryptocurrency is. We also might do IRL airdrops at some point. Of note, key here
+                    is to make the start with crypto as easy as possible, use a fun attitude and gamification to get new users started without all the usual hassle, and then educate them to handle crypto in general in a responsible way.</p>
+                <a href="https://banano.cc/" target="_blank">Check out more about Banano and get a wallet address here!</a>
+            </div>
+            <div class="col-md-2 text-center align-items-center">
+                <div class="tip">
+                    <h5>Donations 🍌:</h5>
+                    <div id="tip_qrcode"></div>
+                </div>
+            </div>
+        </div>
     </div>
     <footer>
         <div class="row">
