--- a/banano-sports-pools/templates/rwc/rwc_pools.html
+++ b/banano-sports-pools/templates/rwc/rwc_pools.html
@@ -168,7 +168,7 @@
                                 <p>To make your deposits more fair and informed, the Vegas Odds and implied win probability for each game are provided. If you believe in these probabilities, then the percent of BAN in each team's pool should be close to these percentages. Further, if you check the box called "Recommend Teams/Games", we will recommend
                                     games and teams whose pools are imbalanced according to the Vegas Odds.
                                 </p>
-                                <p>There currently is NO HOUSE FEE, but this might change in the future. All payouts go out at 12pm UTC and are automated and transparent.</p>
+                                <p>There currently is NO HOUSE FEE, but this might change in the future. All payouts go out hourly on the 15 UTC and are automated and transparent.</p>
                             </div>
                         </div>
                     </div>
