added game status (v2.2)

--- a/banano-sports-pools/templates/roadmap.html
+++ b/banano-sports-pools/templates/roadmap.html
@@ -75,6 +75,14 @@
                 <div class="col-md-12">
                     <h1>Release Notes</h1>
                     <hr style="color:lightgray; border-width: 3px;">
+                    <h4>09/24/2023, v2.2</h4>
+                    <ul>
+                        <li>Added game status for when scores are refreshed during the match</li>
+                        <li>Added donations capability</li>
+                        <li>Payout Engine has been rebuilt and now sends hourly</li>
+                    </ul>
+                </div>
+                <div class="col-md-12">
                     <h4>09/12/2023, v2.1</h4>
                     <ul>
                         <li>Finished refactor of the backend to add new sports more systematically</li>
